hphp/hack/test/typecheck/typing_fail_inherit2.php.exp
File "typing_fail_inherit2.php", line 18, characters 3-30:
Redeclared method `Baz::bar` (Parsing[1002])
File "typing_fail_inherit2.php", line 18, characters 19-21:
Method name already bound: `bar` (Naming[2033])
File "typing_fail_inherit2.php", line 17, characters 26-28:
The method `bar` is declared here as static (Typing[4091])
File "typing_fail_inherit2.php", line 18, characters 19-21:
But it conflicts with an inherited non-static declaration here
File "typing_fail_inherit2.php", line 18, characters 19-21:
The method `bar` is declared here as non-static (Typing[4091])
File "typing_fail_inherit2.php", line 17, characters 26-28:
But it conflicts with an inherited static declaration here
